[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/character_creation/steps/ability_score_step.gd" id="1_abs"]

[node name="AbilityScoreStep" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="MethodButtons" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="StandardArrayBtn" type="Button" parent="VBoxContainer/MethodButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Standard Array"

[node name="PointBuyBtn" type="Button" parent="VBoxContainer/MethodButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Point Buy"

[node name="RollBtn" type="Button" parent="VBoxContainer/MethodButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Roll 4d6"

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "Choose a method to generate ability scores."

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScoreGrid" type="GridContainer" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 8
